--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^2.0.0",
     "date-fns": "2.0.0-alpha.7",
     "material-ui-pickers": "^1.0.0-rc.12",
+    "npm": "^6.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
